--- a/app/views/UserRegister.scala.html
+++ b/app/views/UserRegister.scala.html
@@ -4,27 +4,39 @@
 	<head>
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script type="text/javascript">
-			function test() {
-				console.log($('#rf').serialize())
-				var email = $("#email").val();
-				var userName = $("#userName").val();
-				var city = $("#city").val();
-				var password = $("#password").val();
-				$.ajax({
-					type: "POST",//方法类型
-					dataType: "text",//预期服务器返回的数据类型
-					url: "/doRegister" ,
-					data: {email: email,userName: userName,city: city,password: password},
-					success: function (result) {
-						console.log(result);//打印服务端返回的数据(调试用)
-						alert("REGISTER SUCCESS");
-					},
-					error: function(res) {
-						alert("异常！");
-						console.log(res)
-					}
-				});
-			}
+						function test() {
+							console.log($('#rf').serialize())
+							var email = $("#email").val();
+							var userName = $("#userName").val();
+							var avatar = $("#avatar").val()
+							var city = $("#city").val();
+							var password = $("#password").val();
+							var data = {
+								"email": email,
+								"userName": userName,
+								"avatar": avatar,
+								"city": city,
+								"password": password
+							};
+							// console.log(data);//测试传出数据
+							$.post("/doRegister", data, function (res) {
+								console.log(res);
+							});
+							// $.ajax({
+							// 	type: "POST",//方法类型
+							// 	dataType: "text",//预期服务器返回的数据类型
+							// 	url: "/doRegister" ,
+							// 	data: {email: email,userName: userName,city: city,password: password},
+							// 	success: function (result) {
+							// 		console.log(result);//打印服务端返回的数据(调试用)
+							// 		alert("REGISTER SUCCESS");
+							// 	},
+							// 	error: function(res) {
+							// 		alert("异常！");
+							// 		console.log(res)
+							// 	}
+							// });
+						}
 		</script>
 		<meta charset="UTF-8">
 		<title>@title</title>
@@ -37,6 +49,9 @@
 				</tr>
 				<tr>
 					<td>用户名</td><td><input id="userName" name="userName" type="text"></td>
+				</tr>
+				<tr>
+					<td>选择头像</td><td><input id="avatar" name="avatar" type="file"></td>
 				</tr>
 				<tr>
 					<td>城市</td><td><input id="city" name="city" type="text"></td>
